# engine

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
include/: Engine.h
public/: Content.h  Input.h  KeyCodes.h  Log.h  rect.h  rectI.h
public/components/: CameraComponent.h  Collider.h  ColliderComponent.h  Component.h  Ecs.h  Entity.h  Entity.hpp  Hurtable.h  Kinetic.h  KineticComponent.h  SpriteComponent.h  TileMapComponent.h  TimerComponent.h
public/graphics/: Color.h
public/math/: Utils.h
public/time/: time.h
sandbox/: Background.cpp  Bird.cpp  CMakeLists.txt  Floor.cpp  Pipe.cpp  Slider.cpp  main.cpp
sandbox/assets/: bird.ase  ctr.fsh  ctr.vsh  webman.aseprite
sandbox/include/: Background.h  Bird.h  Floor.h  Pipe.h  Slider.h
src/: Application.cpp  Application.h  Content.cpp  Input.cpp  Log.cpp  TexturePacker.cpp  TexturePacker.h  main.cpp  main.cpp~  time.cpp
src/components/: CameraComponent.cpp  Collider.cpp  ColliderComponent.cpp  Hurtable.cpp  Kinetic.cpp  KineticComponent.cpp  SpriteComponent.cpp  TileMapComponent.cpp  TimerComponent.cpp
src/ecs/: Component.cpp  Ecs.cpp  Entity.cpp
src/graphics/: Batch.cpp  Batch.h  Color.cpp  DefaultShader.h  FrameBuffer.cpp  FrameBuffer.h  Material.cpp  Material.h  Sampler.h  Shader.cpp  Shader.h  Sprite.h  Subtexture.cpp  Subtexture.h  Texture.cpp  Texture.h  blend.cpp  blend.h  font.cpp  font.h  mesh.cpp  mesh.h  rect.cpp  rectI.cpp  renderpass.cpp  renderpass.h
src/image/: Aseprite.cpp  Aseprite.h
src/math/: Utils.cpp
